--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
+      <div class="pull-right user-info">
+        <% if current_user %>
+        Hello <%= link_to (current_user.email || current_user.name), edit_user_registration_path %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <% else %>
+             <%= link_to "Sign In", new_user_session_path %> or 
+             <%= link_to "Sign Up", new_user_registration_path %>
+           <% end %>
+      </div>
       <li><%= link_to "Home", welcome_index_path %></li>
       <li><%= link_to "About", welcome_about_path %></li>
     </ul>
