--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,14 @@
       </div>
       <li><%= link_to "Home", welcome_index_path %></li>
       <li><%= link_to "About", welcome_about_path %></li>
-    </ul>
-    
+      <% if current_user %>
+        <% if current_user.list == nil %>
+           <li><%= link_to "New To-do List", new_list_path, class: 'btn btn-success' %></li>
+        <%else%>
+      <li><%= link_to current_user.list.title, list_path(current_user.list.id) %></li>
+        <%end%>
+      <%end%>
+    </ul>   
     <% if flash[:notice] %>
      <div class="alert alert-success">
        <button type="button" class="close" data-dismiss="alert">&times;</button>
