--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,12 +5,12 @@
 <% elsif %>
     <p class="lead"><%= @list.title %></p>
     <%= link_to "Edit", edit_list_path, class: 'btn btn-success' %>
-    <%= link_to "Delete", @list, method: :delete, class: "btn btn-danger", data: {confirm: "Are you sure you want to delete this Topic?"} %>
+    <%= link_to "Delete", @list, method: :delete, class: "btn btn-danger", data: {confirm: "Are you sure you want to delete this List?"} %>
  <% end %>
   </h4>
   <div class="row">
   <div class="col-md-8">
-    <%= render partial: 'items/item', collection: @items %>
+    <%= render partial: 'items/item', collection: @items, locals: {list: @list} %>
   <div class="col-md-8">
     <%= render partial: "items/form", locals: {list: @list} %>
    </div>
