--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
     <ul class="nav nav-tabs">
       <div class="pull-right user-info">
         <% if current_user %>
-        Hello <%= link_to (current_user.email || current_user.name), edit_user_registration_path %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        Hello <%= link_to (current_user.email || current_user.name), edit_user_registration_path %>!
+        <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm', title: "Profile History" do %>
+              <span class="glyphicon glyphicon-user"></span>
+            <% end %>
+        <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm', title: "Sign Out" do %>
+              <span class="glyphicon glyphicon-log-out"></span>
+        <%end%>
         <% else %>
              <%= link_to "Sign In", new_user_session_path %> or 
              <%= link_to "Sign Up", new_user_registration_path %>
@@ -20,9 +26,7 @@
       <li><%= link_to "Home", welcome_index_path %></li>
       <li><%= link_to "About", welcome_about_path %></li>
       <% if current_user %>
-        <% if current_user.list == nil %>
-           <li><%= link_to "New To-do List", new_list_path, class: 'btn btn-success' %></li>
-        <%else%>
+        <% if current_user.list %>
       <li><%= link_to current_user.list.title, list_path(current_user.list.id) %></li>
         <%end%>
       <%end%>
