--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,11 @@
   <p>
     <% if current_user %>
       <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary' %>
+    <% if current_user.list == nil %>
+           <%= link_to "New To-do List", new_list_path, class: 'btn btn-success' %>
+        <%else%>
+      <%= link_to current_user.list.title, list_path(current_user.list.id), class: 'btn btn-primary' %>
+        <%end%>
     <%else%>
     <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
       <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
