--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <ul class="nav nav-tabs">
       <div class="pull-right user-info">
         <% if current_user %>
+        <%= image_tag(current_user.avatar.tiny.url) if current_user.avatar? %>
         Hello <%= link_to (current_user.email || current_user.name), edit_user_registration_path %>!
         <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm', title: "Profile History" do %>
               <span class="glyphicon glyphicon-user"></span>
